change the location of i18n and swagger
