# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1/
 definitions:
-  common.TaskStatus:
+  crawlers_pkg_base.TaskStatus:
     enum:
     - 1
     - 2
@@ -14,7 +14,7 @@ definitions:
     - TaskStatusFinished
     - TaskStatusFailed
     - TaskStatusRetryFailed
-  entity.Catalog:
+  crawlers_pkg_model_entity.Catalog:
     properties:
       attributes:
         additionalProperties: true
@@ -38,7 +38,62 @@ definitions:
     - name
     - siteId
     type: object
-  entity.Site:
+  crawlers_pkg_model_entity.CatalogPageTask:
+    properties:
+      attributes:
+        additionalProperties: true
+        type: object
+      catalogId:
+        type: string
+      createdDate:
+        type: string
+      id:
+        description: 添加omitempty，当为空时，mongo driver会自动生成
+        type: string
+      lastUpdated:
+        type: string
+      retries:
+        type: integer
+      siteName:
+        type: string
+      status:
+        $ref: '#/definitions/crawlers_pkg_base.TaskStatus'
+      url:
+        type: string
+    required:
+    - catalogId
+    - url
+    type: object
+  crawlers_pkg_model_entity.NovelTask:
+    properties:
+      attributes:
+        additionalProperties: true
+        type: object
+      catalogId:
+        type: string
+      createdDate:
+        type: string
+      hasChapters:
+        type: boolean
+      id:
+        type: string
+      lastUpdated:
+        type: string
+      name:
+        type: string
+      retries:
+        type: integer
+      siteName:
+        type: string
+      status:
+        $ref: '#/definitions/crawlers_pkg_base.TaskStatus'
+      url:
+        type: string
+    required:
+    - catalogId
+    - url
+    type: object
+  crawlers_pkg_model_entity.Site:
     properties:
       attributes:
         additionalProperties: true
@@ -63,61 +118,6 @@ definitions:
     - displayName
     - name
     type: object
-  model.CatalogPageTask:
-    properties:
-      attributes:
-        additionalProperties: true
-        type: object
-      catalogId:
-        type: string
-      createdDate:
-        type: string
-      id:
-        description: 添加omitempty，当为空时，mongo driver会自动生成
-        type: string
-      lastUpdated:
-        type: string
-      retries:
-        type: integer
-      siteName:
-        type: string
-      status:
-        $ref: '#/definitions/common.TaskStatus'
-      url:
-        type: string
-    required:
-    - catalogId
-    - url
-    type: object
-  model.NovelTask:
-    properties:
-      attributes:
-        additionalProperties: true
-        type: object
-      catalogId:
-        type: string
-      createdDate:
-        type: string
-      hasChapters:
-        type: boolean
-      id:
-        type: string
-      lastUpdated:
-        type: string
-      name:
-        type: string
-      retries:
-        type: integer
-      siteName:
-        type: string
-      status:
-        $ref: '#/definitions/common.TaskStatus'
-      url:
-        type: string
-    required:
-    - catalogId
-    - url
-    type: object
 info:
   contact: {}
   description: crawler接口参考文档
@@ -136,19 +136,19 @@ paths:
         name: siteId
         required: true
         schema:
-          $ref: '#/definitions/entity.Catalog'
+          $ref: '#/definitions/crawlers_pkg_model_entity.Catalog'
       - description: 目录名称
         in: body
         name: name
         required: true
         schema:
-          $ref: '#/definitions/entity.Catalog'
+          $ref: '#/definitions/crawlers_pkg_model_entity.Catalog'
       - description: 目录URL
         in: body
         name: url
         required: true
         schema:
-          $ref: '#/definitions/entity.Catalog'
+          $ref: '#/definitions/crawlers_pkg_model_entity.Catalog'
       produces:
       - application/json
       responses:
@@ -165,16 +165,10 @@ paths:
       parameters:
       - description: 目录ID
         in: body
-        name: catalogId
+        name: request
         required: true
         schema:
-          $ref: '#/definitions/model.CatalogPageTask'
-      - description: URL， 格式：http://prefix?page=1, http://prefix?page=1-3
-        in: body
-        name: url
-        required: true
-        schema:
-          $ref: '#/definitions/model.CatalogPageTask'
+          $ref: '#/definitions/crawlers_pkg_model_entity.CatalogPageTask'
       produces:
       - application/json
       responses:
@@ -189,18 +183,12 @@ paths:
       - application/json
       description: 处理Novel页面请求,解析出章节的地址并发送到消息对列中去
       parameters:
-      - description: Novel ID
+      - description: Novel Task
         in: body
-        name: catalogId
+        name: request
         required: true
         schema:
-          $ref: '#/definitions/model.NovelTask'
-      - description: Novel URL， 格式：http://prefix/xx
-        in: body
-        name: url
-        required: true
-        schema:
-          $ref: '#/definitions/model.NovelTask'
+          $ref: '#/definitions/crawlers_pkg_model_entity.NovelTask'
       produces:
       - application/json
       responses:
